--- a/rule/play-ws/pom.xml
+++ b/rule/play-ws/pom.xml
@@ -29,12 +29,12 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <sa.rule.name>play:ws</sa.rule.name>
-    <min.version>2.0.0</min.version>
+    <min.version>2.7.3</min.version>
     <max.version>2.7.5</max.version>
 
     <!-- fixme: max version check -->
     <!-- fixme: support multiple scala versions -->
-    <passCompatibility>com.typesafe.play:play-ws_2.12:[${min.version},]</passCompatibility>
+    <passCompatibility>com.typesafe.play:play-ws_2.13:[${min.version},]</passCompatibility>
     <!-- FIXME: The compatibility of this rule is very unusual, and very restricted. -->
     <!-- FIXME: this check probably mess up 2.13 ? we need both checks -->
     <!--<passCompatibility>com.typesafe.play:shaded-asynchttpclient:[${min.version},2.0.5),(2.0.5,2.1.0-M1)</passCompatibility>-->
@@ -43,14 +43,23 @@
     <dependency>
       <groupId>com.typesafe.play</groupId>
       <artifactId>shaded-asynchttpclient</artifactId>
-      <version>${min.version}</version>
+      <version>2.1.2</version>
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
+    <!-- otherwise 0.8.0 is selected which is not avail for scala 2.13 -->
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-java8-compat_2.13</artifactId>
+      <version>0.9.0</version>
+      <optional>true</optional>
+      <scope>provided</scope>
+    </dependency>
+    <!-- or standalone? !! -->
     <dependency>
       <groupId>com.typesafe.play</groupId>
-      <artifactId>play-ahc-ws-standalone_2.12</artifactId>
-      <version>${min.version}</version>
+      <artifactId>play-ahc-ws-standalone_2.13</artifactId>
+      <version>2.0.6</version>
       <optional>true</optional>
       <scope>test</scope>
     </dependency>
