--- a/opentracing-specialagent/pom.xml
+++ b/opentracing-specialagent/pom.xml
@@ -540,6 +540,14 @@
       <artifactId>maven-embedder</artifactId>
       <optional>true</optional>
       <scope>test</scope>
+      <!--
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </exclusion>
+      </exclusions>
+      -->
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
