--- a/specialagent-maven-plugin/pom.xml
+++ b/specialagent-maven-plugin/pom.xml
@@ -118,6 +118,12 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-embedder</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <artifactId>junit</artifactId>
