--- a/rule/play/pom.xml
+++ b/rule/play/pom.xml
@@ -61,5 +61,13 @@
       <optional>true</optional>
       <scope>test</scope>
     </dependency>
+    <!-- for schema inference -->
+    <dependency>
+      <groupId>io.opentracing.contrib.specialagent.</groupId>
+      <artifactId>opentracing-adapter</artifactId>
+      <version>${parent.version}</version>
+      <optional>true</optional>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
