--- a/opentracing-adapter/pom.xml
+++ b/opentracing-adapter/pom.xml
@@ -90,6 +90,13 @@
       <artifactId>kensu-dam-java-client-jackson-2-10-0</artifactId>
       <version>1.1.1-SNAPSHOT</version>
       <scope>compile</scope>
+
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- for zero server use. fixme: but would it work with default plugins? -->
@@ -102,20 +109,22 @@
       <groupId>io.opentracing.contrib</groupId>
       <artifactId>span-reporter-slf4j</artifactId>
       <version>0.3.0-2-gb3e162c-SNAPSHOT</version>
-      <!--
+
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-api</artifactId>
         </exclusion>
       </exclusions>
-      -->
+
     </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.30</version>
+      <version>1.7.26</version>
+<!--      <optional>true</optional>-->
+<!--      <scope>provided</scope>-->
     </dependency>
 
     <dependency>
