--- a/rule/akka-http/pom.xml
+++ b/rule/akka-http/pom.xml
@@ -162,7 +162,8 @@ actor 2.5.31
       <artifactId>akka-stream_2.13</artifactId>
       <version>2.5.31</version>
       <optional>true</optional>
-      <scope>test</scope>
+      <!-- needed for stream.Flow[req, resp, _] support for akka-http servers in scala -->
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
